<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pause_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/pause"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:elevation="5dp"
        android:shadowColor="@color/score_textDark"
        android:shadowRadius="80"
        android:text="@string/pause"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/resume"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_below="@+id/pause"
        android:background="@drawable/function_button"
        android:paddingStart="10dp"
        android:gravity="center"
        android:text="@string/resume"
        android:textColor="?attr/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/minecraft_font"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/restart"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/function_button"
        android:layout_below="@+id/resume"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:text="@string/restart"
        android:gravity="center"
        android:textColor="?attr/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/minecraft_font"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/quit_app"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/button_negative"
        android:layout_below="@+id/restart"
        android:layout_marginTop="15dp"
        android:text="@string/quit_app"
        android:gravity="center"
        android:textColor="#C84B4B"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/minecraft_font"/>

</RelativeLayout>