<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameOver_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/gameOver"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:elevation="5dp"
        android:shadowColor="@color/black"
        android:shadowRadius="20"
        android:fontFamily="@font/rog_font"
        android:text="@string/game_over"
        android:textColor="@color/red"
        android:textSize="55sp"
        android:textStyle="bold"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cat_laugh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/score_gained"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:fontFamily="@font/minecraft_font"
            android:gravity="center"
            android:text="@string/score_gained"
            android:textColor="@color/red_150"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lines_cleared"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/minecraft_font"
            android:gravity="center"
            android:text="@string/lines_cleared"
            android:textColor="@color/red_150"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tetris_gained"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/minecraft_font"
            android:gravity="center"
            android:text="@string/tetris_gained"
            android:textColor="@color/red_150"
            android:textSize="35sp"
            android:textStyle="bold" />
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/restart"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/button_positive"
            android:fontFamily="@font/minecraft_font"
            android:gravity="center"
            android:text="@string/restart_game"
            android:textColor="#50E632"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/quit_app"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_negative"
            android:fontFamily="@font/minecraft_font"
            android:gravity="center"
            android:text="@string/quit"
            android:textColor="#C84B4B"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/cat_laugh"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameOver"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:alpha="0.85"
        android:elevation="-1dp"
        android:src="@drawable/cat_laugh" />
</RelativeLayout>