<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/gameover"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:elevation="5dp"
        android:shadowColor="@color/score_textDark"
        android:shadowRadius="80"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        tools:ignore="PrivateResource"/>

    <Button
        android:id="@+id/lightDark"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/function_button"
        android:layout_below="@+id/gameover"
        android:layout_centerHorizontal="true"
        android:paddingStart="-58dp"
        android:fontFamily="@font/minecraft_font"
        android:gravity="center"
        android:text="?attr/textAppearanceBody1"
        android:textColor="?attr/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lightDark"
        android:layout_alignEnd="@+id/lightDark"
        android:layout_alignBottom="@+id/lightDark"
        android:paddingTop="3dp"
        android:layout_marginEnd="23.5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/nul"
        android:src="@drawable/light_dark" />

    <Spinner
        android:id="@+id/choose_block"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_below="@+id/lightDark"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/function_button"
        android:popupBackground="@drawable/popup_spinner"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_alignTop="@+id/choose_block"
        android:layout_centerHorizontal="true"
        android:paddingStart="10dp"
        android:fontFamily="@font/minecraft_font"
        android:gravity="center"
        android:text="@string/set_blocks"
        android:textColor="?attr/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/change_block"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/choose_block"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/function_button"
        android:gravity="center"
        android:hint="@string/default_block"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#FFC021"
        android:textColorHint="#FFC021"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/emoji_button"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@+id/change_block"
        android:layout_toEndOf="@+id/change_block"
        android:background="@drawable/function_button"
        android:visibility="gone" />
</RelativeLayout>