<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground">

    <RelativeLayout
        android:id="@+id/mon_back"
        android:layout_width="386.2dp"
        android:layout_height="320dp"
        android:background="@drawable/monitor_plate"
        android:elevation="5dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="294.44dp"
            android:layout_height="265dp"
            android:layout_centerInParent="true"
            android:background="@drawable/monitor"
            android:elevation="1dp"/>

        <TextView
            android:id="@+id/scores"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/textView"
            android:layout_toStartOf="@+id/mon"
            android:background="@drawable/monitor_layouts"
            android:elevation="10dp"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="?attr/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lines"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@+id/textView"
            android:layout_toEndOf="@+id/mon"
            android:background="@drawable/monitor_layouts"
            android:elevation="10dp"
            android:text="@string/lines"
            android:textAlignment="center"
            android:textColor="?attr/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <SurfaceView
            android:id="@+id/mon"
            android:layout_width="129.5dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:elevation="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dpad"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@color/nul"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/mon_back"
        app:layout_constraintTop_toBottomOf="@+id/mon_back">

        <RelativeLayout
            android:id="@+id/left_right"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:background="@drawable/button_left"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:id="@+id/up_down"
            android:layout_width="60dp"
            android:layout_height="170dp"
            android:background="@drawable/button_left"
            android:layout_centerInParent="true" />

        <RelativeLayout
            android:id="@+id/pad_mid"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:foreground="@drawable/button_left_middle"
            android:outlineAmbientShadowColor="@color/nul"
            android:outlineSpotShadowColor="@color/nul" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pad_right"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="@+id/mon_back"
        app:layout_constraintTop_toTopOf="@+id/dpad">

        <RelativeLayout
            android:id="@+id/pad_cent"
            android:layout_width="48dp"
            android:layout_height="30.5dp"
            android:layout_centerInParent="true"
            android:background="@color/nul" />

        <Button
            android:id="@+id/Y"
            style="@style/NoThemeButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_above="@+id/pad_cent"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_right"
            android:elevation="5dp"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/btn_Y"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/A"
            style="@style/NoThemeButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/pad_cent"
            android:layout_marginTop="2dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_right"
            android:elevation="5dp"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/btn_A"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="25sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/X"
            style="@style/NoThemeButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/pad_cent"
            android:background="@drawable/button_right"
            android:elevation="5dp"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/btn_X"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/B"
            style="@style/NoThemeButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/pad_cent"
            android:background="@drawable/button_right"
            android:elevation="5dp"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/btn_B"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpad">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/pause"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/function_button"
                android:layout_marginEnd="40dp"
                android:elevation="2dp" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/nul"
                android:elevation="5dp"
                android:src="@drawable/pause"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/orient_at_portrait"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="255dp"
                android:background="@drawable/function_button"
                android:elevation="2dp"
                android:layout_centerInParent="true"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="33dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/nul"
                android:elevation="5dp"
                android:src="@drawable/land"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/setting"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="@drawable/function_button"
                android:elevation="2dp"
                android:layout_marginStart="40dp"
                android:layout_centerInParent="true"/>

            <ImageView
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/nul"
                android:elevation="5dp"
                android:src="@drawable/setting"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/orient_at_land"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/l1"
        tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/r1"
        tools:ignore="MissingConstraints"/>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>